package app.domain.model;

public class AuthFacade {

    public EmployeeStore getUserRoles() {
        return getUserRoles();

    }


}
