@startuml
skinparam classAttributeIconSize 0


class AuthFacade{
+getUserRoles()
+existsUser(email)
}

class Application {
  +static getInstance()
  +getCurrentSession()
  +getCompany()

}

class Company {

+getAuthFacade()
+getEmployeeStore()
}

class Employee {
-name
-phoneNumber
-address
-emailAddress
-citizenCardNumber
-companyID
+getEmailAddress()
+getName()
}


class EmployeeStore{
+getListEmployees()
+ListEmployeesByRole(role)

}






class ListEmployeesController {
+getRoles()
  +getListEmployees()




}

class ListEmployeesUI {

}

ListEmployeesUI ..> ListEmployeesController
ListEmployeesController ..> Application
ListEmployeesController ..> Company
Company ..> AuthFacade
EmployeeStore .left.> AuthFacade
ListEmployeesController ..> Employee
Company "1" --> "1" EmployeeStore : has
EmployeeStore -right-> Employee : knows





@enduml